@@ -1,3 +1,8 @@
+*Mon Jan 11 2010 Henri Gavin <henri.gavin@duke.edu> 0.20100105
+- improve parsing data format for internal element forces and displacements
+- update user-manual.html
+- plotting of internal forces in Gnuplot is the next step (?)
+
 *Fri Jan 8 2010 Henri Gavin <henri.gavin@duke.edu> 0.20100105
 - add function force_bent_beam to frame3dd_io.c to compute deformed mesh
 shapes from static loads using statics and mechanics equations instead of a
